@@ -3,12 +3,7 @@ package tasks;
 import common.Person;
 import common.Task;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -25,72 +20,71 @@ public class Task8 implements Task {
 
   private long count;
 
-  //Не хотим выдывать апи нашу фальшивую персону, поэтому конвертим начиная со второй
+  /*Не хотим выдавать апи нашу фальшивую персону, поэтому конвертим начиная со второй
+
+  Заменил проверку списка на отсутствие элементов через метод isEmpty()
+  Начиная с Java 16, для создания неизменяемого списка из потока используется: Stream.toList().
+  Пропуск первого элемента реализовал в стриме.
+   */
+
   public List<String> getNames(List<Person> persons) {
-    if (persons.size() == 0) {
+    if (persons.isEmpty()) {
       return Collections.emptyList();
     }
-    persons.remove(0);
-    return persons.stream().map(Person::getFirstName).collect(Collectors.toList());
+    return persons.stream().skip(1).map(Person::getFirstName).toList();
   }
 
-  //ну и различные имена тоже хочется
-  public Set<String> getDifferentNames(List<Person> persons) {
-    return getNames(persons).stream().distinct().collect(Collectors.toSet());
+  /* ну и различные имена тоже хочется
+  Не вижу смысла в применении distinct, если следом идет сборка в Set
+  Да и вообще, не стоит тут stream использовать
+  Переименовал метод, чтобы понятнее было, что он делает
+   */
+
+  public Set<String> getUniqueNames(List<Person> persons) {
+    return new HashSet<>(getNames(persons));
   }
 
-  //Для фронтов выдадим полное имя, а то сами не могут
-  public String convertPersonToString(Person person) {
-    String result = "";
-    if (person.getSecondName() != null) {
-      result += person.getSecondName();
-    }
+  /*Для фронтов выдадим полное имя, а то сами не могут
 
-    if (person.getFirstName() != null) {
-      result += " " + person.getFirstName();
-    }
-
-    if (person.getSecondName() != null) {
-      result += " " + person.getSecondName();
-    }
-    return result;
+  Переименовал метод, чтобы было понятнее, что он делает.
+  В исходном варианте фамилия добавлялась в полное имя дважды - думаю, что баг, исправил.
+   */
+  public static String getFullName(Person person) {
+    return Stream.of(person.getFirstName(), person.getSecondName())
+            .filter(Objects::nonNull).collect(Collectors.joining(" "));
   }
 
-  // словарь id персоны -> ее имя
-  public Map<Integer, String> getPersonNames(Collection<Person> persons) {
-    Map<Integer, String> map = new HashMap<>(1);
-    for (Person person : persons) {
-      if (!map.containsKey(person.getId())) {
-        map.put(person.getId(), convertPersonToString(person));
-      }
-    }
-    return map;
+  /* словарь id персоны -> ее имя
+  Тут была логика, что если id повторяется, то не записывать в Map, я бы спросил у разработчика, что он имел ввиду,
+  и если эта логика здесь не необходима то переписал бы метод через стрим, для этого сделал статичным метод getFullName
+  Переименовал метод, чтобы было понятнее, что он делает.
+
+   */
+
+  public Map<Integer, String> getFullNames(Collection<Person> persons) {
+    return persons.stream().collect(Collectors.toMap(Person::getId, Task8::getFullName, (a1, a2) -> a1));
   }
 
-  // есть ли совпадающие в двух коллекциях персоны?
+  /* есть ли совпадающие в двух коллекциях персоны?
+  Можно использовать метод Collection retainAll
+   */
+
   public boolean hasSamePersons(Collection<Person> persons1, Collection<Person> persons2) {
-    boolean has = false;
-    for (Person person1 : persons1) {
-      for (Person person2 : persons2) {
-        if (person1.equals(person2)) {
-          has = true;
-        }
-      }
-    }
-    return has;
+    return !Collections.disjoint(persons1, persons2);
   }
 
-  //...
+  /*...
+  Этот метод будто лишний здесь, как и объявление переменной count в классе, а не в теле метода
+
+   */
   public long countEven(Stream<Integer> numbers) {
-    count = 0;
-    numbers.filter(num -> num % 2 == 0).forEach(num -> count++);
-    return count;
+    return numbers.filter(num -> num % 2 == 0).count();
   }
 
   @Override
   public boolean check() {
-    System.out.println("Слабо дойти до сюда и исправить Fail этой таски?");
-    boolean codeSmellsGood = false;
+    //System.out.println("Слабо дойти до сюда и исправить Fail этой таски?");
+    boolean codeSmellsGood = true;
     boolean reviewerDrunk = false;
     return codeSmellsGood || reviewerDrunk;
   }
